fixtures/core/schema/rejected/core-intent-unknown-verified-mode.fields
# `verifiedOperationMode` is verifier/admission evidence, not a Core field.
expect reject
shape core-intent
field body
field coreEvaluationBudget
field input
field inputConstraints
field output
field requiredOperationProfile
field verifiedOperationMode
